--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -63,6 +63,8 @@
 							<li>|</li>
 							<li class="new-window" th:text="#{PTL_T_NEW_WINDOW}"></li>
 							<li>|</li>
+							<li class="cart" th:text="#{HQP_T_CART}"></li>
+							<li>|</li>
 							<li class="dealer-info" th:text="#{PTL_T_DEALER_INFO}"></li>
 							<li>|</li>
 							<li class="tooltip">[[#{PTL_T_LAST_LOGIN_INFO}]]<span class="last-login-time tooltiptext"></span></li>
@@ -288,6 +290,10 @@ $(function(){
 	
 	$(".top-header li.new-window").on("click", function() {
 		window.open("/portal/forward/entry_point", "");
+	});
+
+	$(".top-header li.cart").on("click", function() {
+		Popup.open("/portal/iv/hq/parts/cart/popup/list", 900, 600);
 	});
 	
 	$(".top-header li.dealer-info").on("click", function() {
