--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/bottom.html
@@ -32,6 +32,10 @@ $(document).ready(function() {
 		window.open("/portal/forward/entry_point", "");
 	});
 	
+	$(".top-header li.cart").on("click", function() {
+		_showCart();
+	});	
+	
 	$(".top-header li.dealer-info").on("click", function() {
 		_clickDealerInfo();	    		
 	});
