--- a/src/main/resources/templates/portal/iv/hq/parts/promotion/popup/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/promotion/popup/view.html
@@ -54,7 +54,7 @@
 						<div class="split-row-more-compact"></div>
 						<button id="BTN_checkAll" type="button" th:text="#{HQP_B_SELECT_ALL}" class="small_button"></button>
 						<button id="BTN_order" type="button" th:text="#{HQP_B_ORDER2}" class="small_button"></button>
-						<button id="BTN_cart" type="button" th:text="장바구니담기" class="small_button"></button>
+						<button id="BTN_addCart" type="button" th:text="장바구니담기" class="small_button"></button>
 						<div class="split-row-more-compact"></div>
 						<div style="display: block; height: 1px; background-color: #cccccc; margin-top:2px; margin-bottom:2px;"></div>
 						<div th:each="promotionItem : ${promotion.promotionItems}">
@@ -112,11 +112,11 @@ $("#BTN_checkAll").on("click", function() {
 });
 
 $("#BTN_order").on("click", function() {
-	if(0==$("input[name=materialChk]:checked").length)
+	if ($("input[name=materialChk]:checked").length == 0)
 	{
-		alert("주문 대상자재를 선택해 주세요.");
+		alert("[[#{HQP_M_SELECT_TARGETS}]]");
 		return;
-	};
+	};	
 	
 	let materialNos = new Array();
 	
@@ -132,10 +132,10 @@ $("#BTN_order").on("click", function() {
 	catch (e) {}
 });
 
-$("#BTN_cart").on("click", function() {
-	if(0==$("input[name=materialChk]:checked").length)
+$("#BTN_addCart").on("click", function() {
+	if ($("input[name=materialChk]:checked").length == 0)
 	{
-		alert("장바구니에 담을 대상자재를 선택해 주세요.");
+		alert("[[#{HQP_M_SELECT_TARGETS}]]");
 		return;
 	};
 	
@@ -143,37 +143,10 @@ $("#BTN_cart").on("click", function() {
 	
 	$("input[name=materialChk]:checked").each(function (index) {
 		materialNos[index] = $(this).val();
-	});
+	});	
 	
-	console.log('materialNos', materialNos);
-	
-	try
-	{
-		JpUtilsAjax.post({
-			url: "/portal/iv/hq/parts/cart/add",
-			data: {"materialNos" : materialNos.join(",")},
-			beforeSend: function(jqXHR, settings)
-			{
-				ProgressBar.show();
-			},			
-		    success: function(response, textStatus, jqXHR)
-		    {
-		    	if (confirm("장바구니에 자재를 담았습니다. \n 장바구니로 이동하시겠습니까?"))
-				{
-					window.opener.location.href = "/portal/iv/hq/parts/cart/list";
-					window.close();
-				}
-		    },
-		    complete: function(jqXHR, textStatus)
-	    	{
-	    		ProgressBar.hide();
-	    	}
-		});
-		
-	}
-	catch (e) { console.log('error', e); }
+	_addCart(materialNos);
 });
-
 
 $("a[downloadKey]").on("click", function() {					
 	PortalFileDownload.download($(this).attr("downloadKey"));
