--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/common_func_js.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/common_func_js.html
@@ -175,6 +175,77 @@ function _setFileUploader(target, fileElementName, deletedElementName)
 	return fileUploader;
 };
 
+//장바구니목록
+function _showCart()
+{
+	if (JpUtilsObject.isNotNull(window.opener))
+	{
+		if (JpUtilsString.isEmpty(window.opener.name))
+		{
+			window.opener.name = "cart";			
+		};
+		
+		document.location.href = "/portal/iv/hq/parts/cart/popup/list";
+	}
+	else
+	{
+		Popup.open("/portal/iv/hq/parts/cart/popup/list", 900, 600);
+	};
+};
+
+//장바구니담기
+function _addCart(arg)
+{
+	if (JpUtilsObject.isNull(arg))
+	{
+		return;
+	};
+	
+	let materialNos = [];
+	
+	if (!Array.isArray(arg))
+	{
+		materialNos.push(arg);
+	}
+	else
+	{
+		materialNos = arg;
+	};
+	
+	if (JpUtilsObject.isNotNull(materialNos) && materialNos.length > 0)
+	{
+		try
+		{
+			JpUtilsAjax.post({
+				url: "/portal/iv/hq/parts/cart/add",
+				data: {"materialNos": materialNos.join(",")},
+				beforeSend: function(jqXHR, settings)
+				{
+					ProgressBar.show();
+				},			
+			    success: function(response, textStatus, jqXHR)
+			    {
+			    	if (confirm("[[#{HQP_M_ADD_CART}]]"))
+					{
+			    		_showCart();
+			    		
+			    		if (window.opener != null)
+			    		{
+			    			//window.close();
+			    		};
+					}
+			    },
+			    complete: function(jqXHR, textStatus)
+		    	{
+		    		ProgressBar.hide();
+		    	}
+			});
+			
+		}
+		catch (e) { console.log("error", e); }		
+	};
+};
+
 /*
  * Datatables default loading 처리. 최초 화면 로딩 시 ajax 실행되지 않게 함.
  * ServerSide: true, deferLoading: false 옵션을 적용할 경우 화면 로딩과 동시에 ajax 가 실행되지 않지만 않지만 ServerSide: true 를 설정할 경우 sorting 과 같은 기능 실행 시 서버 사이드에서 처리를 해야 함. 
