다국어 처리

--- a/src/main/resources/templates/portal/iv/hq/parts/export/info/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/info/view.html
@@ -8,7 +8,7 @@
 <div class="block-header">
 	<div class="block-title" th:text="#{HQP_T_PARTS_INFO}"></div><!-- Parts Info. -->
 	<div class="block-button-area">
-		<button id="BTN_addCart" type="button" th:text="장바구니담기"></button>
+		<button id="BTN_addCart" type="button" th:text="#{HQP_B_ADD_CART}"></button>
 		<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button><!-- Search -->
 	</div>	
 </div>	
