--- a/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
+++ b/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
@@ -8,7 +8,7 @@
 			<li>|</li>
 			<li class="new-window" th:text="#{PTL_T_NEW_WINDOW}"></li>
 			<li>|</li>
-			<li class="cart" th:text="#{HQP_T_CART}"></li>
+			<li class="cart" th:text="#{PTL_T_CART}"></li>
 			<li>|</li>
 			<li class="dealer-info" th:text="#{PTL_T_DEALER_INFO}"></li>
 			<li>|</li>		
