프로모션 기능 조회 권한 체트

--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
@@ -718,7 +718,9 @@ a.link:hover {text-decoration: underline; color: #4183C4; cursor: pointer;}
 	opacity: 0.8;
 }
 
+/*
 .slick-img:hover {
 	opacity: 1;
 }
+*/
 /*--- 프로모션 슬라이드 ------------------*/
