--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -153,7 +153,8 @@
 		</div>
 	</div>
 	<!-- Logout -->
-	<form id="FORM_logout" method="post" th:action="@{${T(org.jwebppy.portal.common.PortalConfigVo).FORM_LOGOUT_PROCESSING_URL}}"></form>	
+	<form id="FORM_logout" method="post" th:action="@{${T(org.jwebppy.portal.common.PortalConfigVo).FORM_LOGOUT_PROCESSING_URL}}"></form>
+	<!-- Redis 에 데이터를 캐싱해 놓기 위해 각 조회 페이지를 미리 실행시킨다 -->
 	<!-- iframe th:src="|${BASE_PATH}/preload|" style="display:none;"></iframe -->
 
 	<!-- 프로모션 배너 -->
@@ -181,7 +182,7 @@ var Promotion = {
 	getPromotionBanner: function() {
 		// 진행중인 프로모션 배너 목록 가져오기
 		JpUtilsAjax.get({
-			url: "/portal/iv/hq/parts/promotion/list/banner",
+			url: "/portal/iv/hq/parts/promotion/banner/list/data",
 			global: false,
 			success: function(data, textStatus, jqXHR)
 			{
@@ -231,7 +232,7 @@ var Promotion = {
 		width = JpUtilsString.defaultString(width, "700");
 		height = JpUtilsString.defaultString(height, "600");
 		
-		Popup.open(url, width, height, "Y", "Y");
+		Popup.open(url, width, height, GLOBAL_CONST.YES, GLOBAL_CONST.YES);
 	},
 	order: function(materialNos) {
 		let html = [];
@@ -350,7 +351,7 @@ $(function(){
 				height: 600,
 				left: 0,
 				top: 0,
-				fgScrollbars: "Y"
+				fgScrollbars: GLOBAL_CONST.YES
 			};
 			
 			let left = 0;
@@ -358,9 +359,9 @@ $(function(){
 			let screenWidth = screen.availWidth;
 			
 			$.each(result.reverse(), function(index, element) {
-				let fgNotShow = JpUtilsString.defaultString($.cookie(element.bcSeq), "N");
+				let fgNotShow = JpUtilsString.defaultString($.cookie(element.bcSeq), GLOBAL_CONST.NO);
 				
-				if (JpUtilsString.equals(fgNotShow, "N"))
+				if (JpUtilsString.equals(fgNotShow, GLOBAL_CONST.NO))
 				{
 					let width = JpUtilsNumber.defaultNumber(parseInt(element.width), 700);
 					let height = JpUtilsNumber.defaultNumber(parseInt(element.height), 600);
@@ -380,8 +381,8 @@ $(function(){
 						height: height,
 						left: left,
 						top: top,
-						fgCenter: "N",
-						fgScrollbars: "Y"
+						fgCenter: GLOBAL_CONST.NO,
+						fgScrollbars: GLOBAL_CONST.YES
 					};
 					
 					JpUiPopup.open(settings);
@@ -424,7 +425,7 @@ function goToBoard(type)
 
 $(".bulletin-area a.link").on("click", function() {
 	let url = "/portal/iv/board/popup/view?bSeq=" + $(this).attr("bSeq") + "&bcSeq=" + $(this).attr("data-key") + "&fgFrom=M";
-	Popup.open(url, 1024, 730, "Y", "Y");
+	Popup.open(url, 1024, 730, GLOBAL_CONST.YES, GLOBAL_CONST.YES);
 });
 
 function checkExpiredPassword()
